# TangentTopologyPathPlanning

./: .gitignore  CMakeLists.txt  README.md
algorithm/: 2d_ENLSVG_grid.cpp  2d_ENLSVG_grid.h  edge_transfer_constraints.cpp  iteration_constraints.cpp  point_to_point_constraints.cpp  surface_processor_ENLSVG_LineScanner.h  surface_processor_LineScanner.cpp  surface_processor_LineScanner.h
algorithm/constraints/: edge_transfer_constraints.h  iteration_constraints.h  node_iteration_constraints.h  point_to_point_constraints.h
algorithm/graph_construction/: tangent_graph.h  tangent_graph_build.h
algorithm/online_search/: breadth_first_search_with_edge.h  breadth_first_search_with_node.h  create_initial_paths_with_edge.h  create_initial_paths_with_node.h  depth_first_search_with_edge.h  depth_first_search_with_node.h  dynamic_data_with_edge.h  dynamic_data_with_node.h  path_tree_with_edge.cpp  path_tree_with_edge.h  path_tree_with_node.h  search_path_with_edge.h  search_path_with_node.h
script/: massive_data_analysis.py
test/: test_2D_path_planning.cpp  test_data.h  test_massive_comparison_2d.cpp
test/test_data/: Berlin_1_256.sat  Berlin_1_256.txt  Berlin_1_256_ENLSVG.vis  Boston_2_256.sat  Boston_2_256.txt  Boston_2_256_ENLSVG.vis  Denver_2_256.sat  Denver_2_256.txt  Denver_2_256_ENLSVG.vis  London_2_256.sat  London_2_256.txt  London_2_256_ENLSVG.vis  Milan_2_256.sat  Milan_2_256.txt  Milan_2_256_ENLSVG.vis  Moscow_2_256.sat  Moscow_2_256.txt  Moscow_2_256_ENLSVG.vis  Paris_0_256.sat  Paris_0_256.txt  Paris_0_256_ENLSVG.vis  Sydney_1_256.sat  Sydney_1_256.txt  Sydney_1_256_ENLSVG.vis
test/visualization/: canvas.cpp  canvas.h
